--- a/css/main.css
+++ b/css/main.css
@@ -55,24 +55,28 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   background-color: #fff2d0;
 }
-/*nav*/
-.navigation {
+.header-box {
   background-color: #b7a5cd;
   border: 3px solid black;
   padding: 20px;
+  height: 90px;
 }
-/*put the nav in grid looks to align everything*/
-.grid-nav {
-  display: grid;
-  grid-template-columns: auto auto auto;
+.logo {
+  position: absolute;
 }
 h1 {
-  margin: 10px;
+  position: relative;
   font-size: 50px;
-}
-ul {
-  margin-top: 28px;
   text-align: center;
+  padding-top: 25px;
+}
+nav {
+  margin-top: -65px;
+}
+li { 
+  position: relative;
+  margin-bottom: 15px;
+  text-align: end;
 }
 a {
   text-decoration: none;
@@ -81,15 +85,13 @@ a {
 a:hover {
   color:#ffe18b;
 }
-/*end nav*/
-
 .content-div {
   background-color: #ffe18b;
   padding-bottom: 100px;
  }
  .search-nav {
-  display: inline;
-  float: right;
+  display: block;
+  text-align: right;
   padding-right: 10px;
   padding-top: 20px;
  }
@@ -98,18 +100,16 @@ h2 {
   font-size: 45px;
   padding: 40px;
 }
-.poster-image {
+img {
   display: block;
-  margin-left: auto;
+  padding-top: 5%;
   margin-right: auto;
-  width: 400px;
-  height: auto;
-  padding-top: 5%; 
+  margin-left: auto;
 }
 .box1 {
   position: relative;
   background-color: #b7a5cd;
-  width: 80%;
+  width: 390px;
   height: 100px;
   border: 4px solid black;
   margin: auto;
@@ -117,7 +117,7 @@ h2 {
 .box2 {
     position: relative;
     background-color: #b7a5cd;
-    width: 80%;
+    width: 390px;
     height: 100px;
     border: 4px solid black;
     margin: auto;
@@ -131,7 +131,7 @@ h2 {
 .boxlink2 {
   font-size: 50px;
   padding-top: 8px;
-  padding-left: 108px;
+  padding-left: 110px;
 }
 h3 {
   padding-top: 10px;
@@ -152,4 +152,65 @@ footer {
 }
 .email {
   margin: 10px;
+}
+.box1:hover {
+  animation-name: growandshrink;
+  animation-duration:2.2s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  cursor: pointer;
+}
+@keyframes growandshrink {
+  100% {
+    background-color: #b7a5cd;
+    transform: scale(1);
+  }
+  25% {
+    background-color: #fff2d0;
+    transform: scale(1, 1.5);
+  }
+  75% {
+    background-color: #ffe18b;
+    transform: scale(1, 0.5);
+  }
+}
+.box2:hover {
+  animation-name: changecolor;
+  background-color: #b7a5cd;
+  animation-duration:3s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  cursor: pointer;
+}
+@keyframes changecolor{
+  100% {background-color: #b7a5cd;}
+  60% {background-color: #ffe18b;}
+  20% {background-color: #fff2d0;}
+  }
+
+@media screen and (min-width: 576px) {
+  nav {
+    padding-top: 120px;
+    text-align: center;
+  }
+  li { 
+    display: inline-block;
+    position: relative;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+  }
+  a {
+    position: relative;
+  }
+  a:hover {
+    color: #fff2d0;
+  }
+  .search-nav {
+    display: block;
+    text-align: center;
+    float: none;
+    padding-top: 50px;
+    text-align: center;
+  }
 }
