--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,9 @@ body {
   padding: 20px;
   height: 90px;
 }
+/*For the layout I could use grid, but is easy to just
+positioning usign absolute for logo and relative for
+the others components*/
 .logo {
   position: absolute;
 }
@@ -85,6 +88,25 @@ a {
 a:hover {
   color:#ffe18b;
 }
+/*Used :focus to press the tab key and access different
+links on a webpage. */
+a:focus {
+  outline: 3px solid black;
+  } 
+/*used it to hide the skip links*/
+.skip-links a {
+  position: absolute;
+  top: -15em;
+  left: 2em;
+  background-color: black;
+  color:white;
+  font-weight: bold;
+}
+.skip-links a:focus{
+  top: 0;
+}
+/*end layout*/
+
 .content-div {
   background-color: #ffe18b;
   padding-bottom: 100px;
@@ -153,6 +175,9 @@ footer {
 .email {
   margin: 10px;
 }
+
+/*I used simple animation, one to transform and the other
+to change colors*/
 .box1:hover {
   animation-name: growandshrink;
   animation-duration:2.2s;
@@ -161,18 +186,12 @@ footer {
   cursor: pointer;
 }
 @keyframes growandshrink {
-  100% {
-    background-color: #b7a5cd;
-    transform: scale(1);
-  }
-  25% {
-    background-color: #fff2d0;
-    transform: scale(1, 1.5);
-  }
-  75% {
-    background-color: #ffe18b;
-    transform: scale(1, 0.5);
-  }
+  100% {background-color: #b7a5cd;
+       transform: scale(1);}
+  75% {background-color: #ffe18b;
+      transform: scale(1, 0.5);}
+  25% {background-color: #fff2d0;
+      transform: scale(1, 1.5);}
 }
 .box2:hover {
   animation-name: changecolor;
@@ -188,6 +207,8 @@ footer {
   20% {background-color: #fff2d0;}
   }
 
+  /*I chose to use media queries to make my website
+  responsive while I can stylish it a little more*/
 @media screen and (min-width: 576px) {
   nav {
     padding-top: 120px;
@@ -200,11 +221,19 @@ footer {
     margin-right: 10%;
     text-align: center;
   }
+  h3 {
+    color: #8a6faa;
+  }
   a {
     position: relative;
+    color: #8a6faa;
   }
   a:hover {
     color: #fff2d0;
+  }
+  .skip-links {
+    position: absolute;
+    margin: -7px;
   }
   .search-nav {
     display: block;
@@ -213,4 +242,21 @@ footer {
     padding-top: 50px;
     text-align: center;
   }
+  .box1 {
+    position: relative;
+    background-color: black;
+    width: 390px;
+    height: 100px;
+    border: 4px solid #8a6faa;;
+    margin: auto;
+  }
+  .box2 {
+      position: relative;
+      background-color: black;
+      width: 390px;
+      height: 100px;
+      border: 4px solid #8a6faa;;
+      margin: auto;
+      margin-top: 20px;
+    }
 }
